# uni-algo

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: clang-tidy.yml  constexpr.yml  cppcheck.yml  linux.yml  macos.yml  windows.yml
doc/: API.md  API_ABI_STABILITY.md  CONSTEXPR.md  CURSOR.md  CUSTOM_ALLOCATOR.md  DRAFT.md  SAFE_LAYER.md
example/: cpp_find_text_in_file.h  cpp_iterator_chains.h  cpp_ranges.h  cpp_security_corner_cases.h
example/c_wrapper/: c_uni.c  c_uni.h
include/uni/: all.h  break_grapheme.h  break_word.h  case.h  config.h  convert.h  data.cpp  iterator.h  norm.h  ranges.h  version.h
include/uni/ext/translit/: japanese_kana_to_romaji_hepburn.h  macedonian_to_latin_docs.h
include/uni/impl/: break_grapheme.h  break_grapheme_data.h  break_word.h  break_word_data.h  case.h  case_data.h  case_locale.h  convert.h  cpp_lib_version.h  iterator.h  norm.h  norm_data.h  norm_data_extern.h  types.h  unicode_version.h
include/uni/impl/doc/: README_FIRST.txt  config_defines.txt  list_and_info.txt  signature.txt
include/uni/impl/example/: cpp_proxy_iterator.h
include/uni/internal/: defines.h  error.h  sentinel.h
include/uni_algo/: all.h  break_grapheme.h  break_word.h  case.h  config.h  conv.h  convert.h  locale.h  norm.h  prop.h  ranges.h  ranges_conv.h  ranges_grapheme.h  ranges_norm.h  ranges_word.h  script.h  version.h
include/uni_algo/ext/: README.md  ascii.h
include/uni_algo/ext/translit/: japanese_kana_to_romaji_hepburn.h  macedonian_to_latin_docs.h
include/uni_algo/impl/: impl_break_grapheme.h  impl_break_grapheme_data.h  impl_break_word.h  impl_break_word_data.h  impl_case.h  impl_case_data.h  impl_case_locale.h  impl_conv.h  impl_convert.h  impl_cpp_lib_version.h  impl_data.h  impl_iter.h  impl_iterator.h  impl_locale.h  impl_norm.h  impl_prop.h  impl_prop_data.h  impl_script.h  impl_segment_grapheme.h  impl_segment_word.h  impl_types.h  impl_unicode_version.h  internal_defines.h  internal_stages.h  internal_undefs.h
include/uni_algo/impl/data/: LICENSE.txt  data_break_grapheme.h  data_break_word.h  data_case.h  data_norm.h  data_prop.h  data_script.h  data_segment_grapheme.h  data_segment_word.h  extern_break_grapheme.h  extern_break_word.h  extern_case.h  extern_norm.h  extern_prop.h  extern_script.h  extern_segment_grapheme.h  extern_segment_word.h
include/uni_algo/impl/doc/: comment_tags.txt  config_defines.txt  data.txt  generator_utf16.txt  isolated_arrays.txt  list_and_info.txt  what_is_this_language.txt
include/uni_algo/impl/example/: cpp_proxy_iterator.h
include/uni_algo/internal/: data_inl.h  error.h  found.h  locale_inl.h  ranges_core.h  ranges_translit.h  safe_layer.h  search.h
perf/: main.cpp  perf_break_utf16.h  perf_break_utf8.h  perf_convert_utf8to16.h  perf_normalize_nfc_utf16.h  perf_normalize_nfc_utf8.h  perf_segment_utf16.h  perf_segment_utf8.h  perf_transform_utf16.h
perf/result/: break_utf16.md  convert_utf8to16.md  normalize_nfc_utf16.md  normalize_nfc_utf8.md  segment_utf16.md  transform_utf16.md
sqlite/: README.md  unisqlite.c  unisqlite.h
src/: cpp_uni_all.h  cpp_uni_break_grapheme.h  cpp_uni_break_word.h  cpp_uni_case.h  cpp_uni_config.h  cpp_uni_convert.h  cpp_uni_data.cpp  cpp_uni_iterator.h  cpp_uni_locale.h  cpp_uni_norm.h  cpp_uni_prop.h  cpp_uni_ranges.h  cpp_uni_version.h  data.cpp
src/ext/translit/: japanese_kana_to_romaji_hepburn.h  macedonian_to_latin_docs.h
src/impl/: impl_break_grapheme.h  impl_break_grapheme_data.h  impl_break_word.h  impl_break_word_data.h  impl_case.h  impl_case_data.h  impl_case_data_extern.h  impl_case_locale.h  impl_convert.h  impl_cpp_lib_version.h  impl_iterator.h  impl_locale.h  impl_norm.h  impl_norm_data.h  impl_norm_data_extern.h  impl_prop.h  impl_unicode_version.h  internal_undefs.h
src/impl/doc/: config_defines.txt  list_and_info.txt  what_is_this_language.txt
src/internal/: cpp_uni_data_inl.h  cpp_uni_error.h  cpp_uni_ranges_core.h  cpp_uni_ranges_translit.h
test/: CMakeLists.txt  REMINDER.md  REMINDER.txt  main.cpp  main.h  test_alloc_func.h  test_ascii.h  test_break.h  test_case.h  test_conv_and_iter.h  test_convert_and_iter.h  test_extra.h  test_fast_ascii.h  test_kewb.h  test_lenient.h  test_lenient2.h  test_lenient_iter.h  test_lenient_iter_rev.h  test_locale.h  test_norm.h  test_norm_unaccent.h  test_perf_iter_conv.h  test_prop.h  test_ranges.h  test_script.h  test_segment.h  test_segment_cursor.h  test_short_func.h  test_strict.h  test_strict2.h  test_strict_iter.h  test_strict_iter_rev.h  test_translit.h  test_translit_buffer.h  test_valid.h  test_version.h  test_visual.h  test_visual_data.h
test/clang-tidy/: .clang-tidy  main.cpp
test/cmake/: default-build-type.cmake
test/random_stuff/: amalgamation.h  broken_utf8to16.h  mg152_notes.txt  simple_search.h  unaligned_load_store.h  unsafe_utf8to16.h  w3c_utf8to16.h
test/standalone/: case.cpp  config.cpp  conv.cpp  locale.cpp  norm.cpp  prop.cpp  ranges.cpp  ranges_conv.cpp  ranges_grapheme.cpp  ranges_norm.cpp  ranges_word.cpp  script.cpp  standalone.cmake  version.cpp
test/standalone/ext/: ascii.cpp
test/standalone/ext/translit/: japanese_kana_to_romaji_hepburn.cpp  macedonian_to_latin_docs.cpp
test/standalone/impl/: impl_break_word.cpp  impl_case.cpp  impl_case_locale.cpp  impl_conv.cpp  impl_iter.cpp  impl_locale.cpp  impl_norm.cpp  impl_prop.cpp  impl_script.cpp  impl_segment_grapheme.cpp  impl_segment_word.cpp
test/visual/: test_utf16_broken.txt  test_utf16to8_result.txt  test_utf32_broken.txt  test_utf32to8_result.txt  test_utf8_broken.txt  test_utf8to16_result.txt
